--- a/bower.json
+++ b/bower.json
@@ -1,11 +1,12 @@
 {
   "name": "blarg",
   "version": "0.0.0",
-  "homepage": "https://github.com/wesrice/blarg",
+  "homepage": "https://github.com/airtypestudio/blarg",
   "authors": [
-    "Airtype Studio",
-    "Wes Rice",
-    "Shane Howell"
+    "Airtype Studio <@airtype>",
+    "Wes Rice <@wesrice>",
+    "Shane Howell <@shane_howell>",
+    "Matt Helm <@mtthlm>"
   ],
   "description": "Simple SCSS Framework",
   "keywords": [
