--- a/package.json
+++ b/package.json
@@ -1,27 +1,25 @@
 {
-  "devDependencies": {
-    "gulp": "~3.5.5",
-    "gulp-util": "~2.2.14",
-    "gulp-rename": "^1.0.0",
-    "gulp-notify": "^0.4.6",
-    "gulp-uglify": "~0.2.1",
-    "gulp-imagemin": "~0.1.5",
-    "gulp-livereload": "^1.1.1",
-    "gulp-sass": "~0.7.1",
-    "tiny-lr": "0.0.5",
-    "browser-sync": "~0.6.1",
-    "gulp-watch": "~0.5.0",
-    "gulp-plumber": "~0.5.6",
-    "gulp-jshint": "^1.5.0",
-    "jshint-stylish": "^0.1.5",
-    "map-stream": "^0.1.0",
-    "gulp-sass-graph": "^1.0.0"
-  },
   "dependencies": {
-    "gulp-livereload": "^1.1.1",
-    "gulp-rename": "^1.0.0",
-    "gulp-notify": "^0.4.6",
-    "browser-sync": "^0.6.2",
-    "gulp": "^3.5.5"
+    "browser-sync": "1.9.*",
+    "events": "1.0.*",
+    "gulp-cached": "1.0.*",
+    "gulp-filter": "2.0.*",
+    "gulp-imagemin": "2.1.*",
+    "gulp-jshint": "1.9.*",
+    "gulp-newer": "0.5.*",
+    "gulp-notify": "2.2.*",
+    "gulp-plumber": "0.6.*",
+    "gulp-rename": "1.2.*",
+    "gulp-sass": "1.3.*",
+    "gulp-uglify": "1.1.*",
+    "jshint-stylish": "1.0.*",
+    "map-stream": "0.0.*",
+    "path": "0.11.*"
+  },
+  "devDependencies": {
+    "gulp": "3.8.*",
+    "gulp-concat": "2.4.*",
+    "gulp-install": "0.2.*",
+    "gulp-util": "3.0.*"
   }
 }
