--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "browser-sync": "1.9.*",
     "events": "1.0.*",
+    "gulp-autoprefixer": "^2.1.0",
     "gulp-cached": "1.0.*",
     "gulp-filter": "2.0.*",
     "gulp-imagemin": "2.1.*",
